test/bad/nullables/op09.px

b: [Bool]?
b?[0] = true
